--- a/app/public/index.html
+++ b/app/public/index.html
@@ -18,6 +18,35 @@
     <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
-    <h1>Hello World</h1>
+
+    <nav class="ui menu navbar top-header centered page grid">
+      <h1>LA1:TV</h1>
+    </nav>
+
+    <div class="ui stripe inverted">
+      <div class="row">
+        <div class="ui doubling twelve centered column grid">
+
+          <div class="column">
+            <div class="ui icon header white"><a href="/#/test"><i class="tasks link icon"></i>Lower Thirds</a></div>
+          </div>
+
+          <div class="column">
+            <div class="ui icon header white"><a href="/#/test"><i class="bug link icon"></i>Bug</a></div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+    <div class="ui vertically padded page grid top-take-50">
+      <div class="column">
+        <div class="ui segment">
+          <h1>Test Page</h1>
+          <p>Third section of content</p>
+        </div> 
+      </div>
+    </div>
+
   </body>
 </html>
