Fixed some HTML errors added additional JS libs

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -4,8 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>LA1:TV - CG Dashboard</title>
-    <meta name="description" content="">
-    <meta name=viewport content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="mobile-web-app-capable" content="yes">
 
     <!-- import framework -->
@@ -18,7 +17,6 @@
     <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
-
     <nav class="ui menu navbar top-header centered page grid">
       <h1>LA1:TV</h1>
     </nav>
@@ -28,11 +26,11 @@
         <div class="ui doubling twelve centered column grid">
 
           <div class="column">
-            <div class="ui icon header white"><a href="/#/test"><i class="tasks link icon"></i>Lower Thirds</a></div>
+            <div class="ui icon header white"><a href="/#/test"><i class="tasks icon"></i>Lower Thirds</a></div>
           </div>
 
           <div class="column">
-            <div class="ui icon header white"><a href="/#/test"><i class="bug link icon"></i>Bug</a></div>
+            <div class="ui icon header white"><a href="/#/test"><i class="bug icon"></i>Bug</a></div>
           </div>
 
         </div>
@@ -48,5 +46,9 @@
       </div>
     </div>
 
+
+    <!-- Common JS Libs -->
+    <script src="/js/libs/jquery.js"></script>
+    <script src="/js/libs/semantic.js"></script>
   </body>
 </html>
