Added AngularJS Libs

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -50,5 +50,10 @@
     <!-- Common JS Libs -->
     <script src="/js/libs/jquery.js"></script>
     <script src="/js/libs/semantic.js"></script>
+
+    <!-- AngularJS Libs -->
+    <script src="/libs/angular/angular.js"></script>
+    <script src="/libs/angular/angular-animate.js"></script>
+    <script src="/libs/angular/angular-route.js"></script>
   </body>
 </html>
