Now using UI-View for view composting with ngRoute

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -37,13 +37,7 @@
       </div>
     </div>
 
-    <div class="ui vertically padded page grid top-take-50">
-      <div class="column">
-        <div class="ui segment">
-          <h1>Test Page</h1>
-          <p>Third section of content</p>
-        </div> 
-      </div>
+    <div class="ui vertically padded page grid top-take-50" ng-view>
     </div>
 
 
@@ -58,5 +52,8 @@
 
     <!-- App JS Files -->
     <script src="/js/dashboard.js"></script>
+
+    <!-- CG App Modules -->
+    <script src="/modules/lowerthirds/controller.js"></script>
   </body>
 </html>
