--- a/app/public/index.html
+++ b/app/public/index.html
@@ -45,11 +45,13 @@
     <!-- Common JS Libs -->
     <script src="/js/libs/jquery.js"></script>
     <script src="/js/libs/semantic.js"></script>
+    <script src="/js/libs/socket.io.js"></script>
 
     <!-- AngularJS Libs -->
     <script src="/js/libs/angular/angular.js"></script>
     <script src="/js/libs/angular/angular-animate.js"></script>
     <script src="/js/libs/angular/angular-route.js"></script>
+    <script src="/js/libs/angular/ng-socket-io.js"></script>
 
     <!-- App JS Files -->
     <script src="/js/dashboard.js"></script>
