--- a/app/public/cg/index.html
+++ b/app/public/cg/index.html
@@ -9,6 +9,9 @@
         <!-- Layout styles -->
         <link rel="stylesheet" href="/css/cg.css">
 
+        <!-- Angular 1.3 Animations -->
+        <link rel="stylesheet" href="/css/animation.css">
+
         <!-- Set colours -->
         <link rel="stylesheet/less" type="text/css" href="/css/default.less" />
     </head>
