--- a/app/public/cg/index.html
+++ b/app/public/cg/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="CGApp">
     <head>
         <meta charset="utf-8">
         <title>CG</title>
@@ -12,12 +12,25 @@
         <!-- Angular 1.3 Animations -->
         <link rel="stylesheet" href="/css/animation.css">
 
-        <!-- Set colours -->
+        <!-- Set Theme colours -->
         <link rel="stylesheet/less" type="text/css" href="/css/default.less" />
     </head>
     <body>
 
-        
+        <lower-thirds side="left" animation="bouncy-slide-left"></lower-thirds>
+
+        <!-- 3rd Party Libs -->
         <script src="/js/libs/less.js"></script>
+        <script src="/js/libs/socket.io.js"></script>
+
+        <!-- AngularJS Libs -->
+        <script src="/js/libs/angular/angular.js"></script>
+        <script src="/js/libs/angular/angular-animate.js"></script>
+        <script src="/js/libs/angular/angular-route.js"></script>
+        <script src="/js/libs/angular/ng-socket-io.js"></script>
+
+        <!-- Angular App -->
+        <script src="/js/cg.js"></script>
+        <script src="/modules/lowerthirds/directive.js"></script>
     </body>
 </html>
