--- a/app/public/modules/lowerthirds/cg.html
+++ b/app/public/modules/lowerthirds/cg.html
@@ -1,6 +1,7 @@
-<div class="lowerthird left bottom bouncy-slide-left" ng-show="show">
+<div class="lowerthird bottom" ng-class="side" ng-show="show">
     <div class="gradient-overlay">
         <h1>{{heading}}</h1>
     </div>
+
     <h2 ng-show="subHeading">{{subHeading}}</h2>
 </div>
