Lower Thirds list now animated

--- a/app/public/modules/lowerthirds/admin.html
+++ b/app/public/modules/lowerthirds/admin.html
@@ -24,7 +24,7 @@
             <div class="eleven wide column">
                 <h1>Existing Lower Thirds</h1>
 
-                <div class="ui segment" ng-repeat="third in queuedThirds">
+                <div class="ui segment slide-top" ng-repeat="third in queuedThirds">
                     <div class="ui grid">
                         <div class="six wide column">
                             <h2 class="left aligned ui header">
