Added prototype Grid CG Asset
At the moment will only show a column of two values, hopeful in the
future this can be expanded to any number for columns. There is no limit
on rows unless socket.io has a limit for now limit for how much data can
be sent.

--- a/app/public/cg/index.html
+++ b/app/public/cg/index.html
@@ -19,6 +19,10 @@
 
         <lower-thirds side="left" animation="bouncy-slide-left"></lower-thirds>
 
+        <div class="wrapper">
+            <grid animation="bouncy-slide-left"></grid>
+        </div>
+
         <!-- 3rd Party Libs -->
         <script src="/js/libs/less.js"></script>
         <script src="/js/libs/socket.io.js"></script>
@@ -31,5 +35,6 @@
         <!-- Angular App -->
         <script src="/js/cg.js"></script>
         <script src="/modules/lowerthirds/directive.js"></script>
+        <script src="/modules/grid/directive.js"></script>
     </body>
 </html>
