--- a/app/public/index.html
+++ b/app/public/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
   <html lang="en" ng-app="DashboardApp">
   <head>
@@ -9,6 +8,7 @@
 
     <!-- import framework -->
     <link rel="stylesheet" href="/css/semantic.css">
+    <link rel="stylesheet" href="/css/animation.css">
 
     <!-- import font -->
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
@@ -58,5 +58,6 @@
 
     <!-- CG App Modules -->
     <script src="/modules/lowerthirds/controller.js"></script>
+    <script src="/modules/grid/controller.js"></script>
   </body>
 </html>
