--- a/app/public/index.html
+++ b/app/public/index.html
@@ -52,7 +52,8 @@
     <script src="/js/libs/angular/angular-animate.js"></script>
     <script src="/js/libs/angular/angular-route.js"></script>
     <script src="/js/libs/angular/ng-socket-io.js"></script>
-
+    <script src="/js/libs/angular/ng-storage.js"></script>
+    
     <!-- App JS Files -->
     <script src="/js/dashboard.js"></script>
 
