Added right side lower third

--- a/app/public/cg/index.html
+++ b/app/public/cg/index.html
@@ -19,6 +19,8 @@
 
         <lower-thirds side="left" animation="bouncy-slide-left"></lower-thirds>
 
+        <lower-thirds side="right" animation="bouncy-slide-right"></lower-thirds>
+
         <div class="wrapper">
             <grid animation="bouncy-slide-left"></grid>
         </div>
