Added Bug & Logo assets

--- a/app/public/cg/index.html
+++ b/app/public/cg/index.html
@@ -17,6 +17,8 @@
     </head>
     <body>
 
+        <bug animation="fade-toggle"></bug>
+
         <lower-thirds side="left" animation="bouncy-slide-left"></lower-thirds>
 
         <lower-thirds side="right" animation="bouncy-slide-right"></lower-thirds>
@@ -38,5 +40,6 @@
         <script src="/js/cg.js"></script>
         <script src="/modules/lowerthirds/directive.js"></script>
         <script src="/modules/grid/directive.js"></script>
+        <script src="/modules/bug/directive.js"></script>
     </body>
 </html>
