--- a/app/public/index.html
+++ b/app/public/index.html
@@ -53,6 +53,7 @@
     <script src="/js/libs/angular/angular-route.js"></script>
     <script src="/js/libs/angular/ng-socket-io.js"></script>
     <script src="/js/libs/angular/ng-storage.js"></script>
+    <script src="/js/libs/angular/angular-semantic-ui.js"></script>
     
     <!-- App JS Files -->
     <script src="/js/dashboard.js"></script>
@@ -60,5 +61,6 @@
     <!-- CG App Modules -->
     <script src="/modules/lowerthirds/controller.js"></script>
     <script src="/modules/grid/controller.js"></script>
+    <script src="/modules/bug/controller.js"></script>
   </body>
 </html>
