Added Countdown Clock for BailriggFM Stream

--- a/app/public/cg/index.html
+++ b/app/public/cg/index.html
@@ -30,11 +30,13 @@
         <!-- 3rd Party Libs -->
         <script src="/js/libs/less.js"></script>
         <script src="/js/libs/socket.io.js"></script>
+        <script src="/js/libs/moment.js"></script>
 
         <!-- AngularJS Libs -->
         <script src="/js/libs/angular/angular.js"></script>
         <script src="/js/libs/angular/angular-animate.js"></script>
         <script src="/js/libs/angular/ng-socket-io.js"></script>
+        <script src="/js/libs/angular/angular-momentjs.js"></script>
 
         <!-- Angular App -->
         <script src="/js/cg.js"></script>
