Cleaned up theme live background pulsates

--- a/app/public/modules/bug/cg.html
+++ b/app/public/modules/bug/cg.html
@@ -1,6 +1,6 @@
 <div>
 	<div class="bug left top">
-	    <h1 class="black rotate-in" ng-show="bug.showClock">{{clock | date: "HH:mm"}}</h1><h1 class="rotate-in" ng-show="bug.showLive">LIVE</h1><h1 class="black rotate-in" ng-show="bug.showClock">{{ countdown }} REMAINING</h1>
+	    <h1 class="black rotate-in" ng-show="bug.showClock">{{clock | date: "HH:mm"}}</h1><h1 class="live rotate-in" ng-show="bug.showLive">LIVE</h1><h1 class="black rotate-in" ng-show="bug.showClock">{{ countdown }} REMAINING</h1>
 	</div>
 
 	<div class="logo right top toggle" ng-show="bug.showLogo">
