Less now compiled express middleware not JS

--- a/app/public/cg/index.html
+++ b/app/public/cg/index.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="/css/animation.css">
 
         <!-- Set Theme colours -->
-        <link rel="stylesheet/less" type="text/css" href="/css/default.less" />
+        <link rel="stylesheet" href="/css/default.css">
     </head>
     <body>
 
@@ -28,7 +28,6 @@
         </div>
 
         <!-- 3rd Party Libs -->
-        <script src="/js/libs/less.js"></script>
         <script src="/js/libs/socket.io.js"></script>
         <script src="/js/libs/moment.js"></script>
 
