More twitter stuff
Now works as Lower Third.
Next job, replace L3 form with tweet list

--- a/app/public/cg/index.html
+++ b/app/public/cg/index.html
@@ -23,6 +23,11 @@
 
         <lower-thirds side="right" animation="bouncy-slide-right"></lower-thirds>
 
+        <twitter side="left" animation="bouncy-slide-left"></twitter>
+
+
+
+
         <div class="wrapper">
             <grid animation="bouncy-slide-left"></grid>
         </div>
@@ -39,8 +44,11 @@
 
         <!-- Angular App -->
         <script src="/js/cg.js"></script>
-        <script src="/modules/lowerthirds/directive.js"></script>
         <script src="/modules/grid/directive.js"></script>
         <script src="/modules/bug/directive.js"></script>
+        <script src="/modules/twitter/directive.js"></script>
+        <script src="/modules/lowerthirds/directive.js"></script>
+
+
     </body>
 </html>
