--- a/app/public/modules/twitter/admin.html
+++ b/app/public/modules/twitter/admin.html
@@ -11,7 +11,7 @@
 
                     <div class="field">
                         <label>Sub-Heading</label>
-                        <input name="subHeading" placeholder="Sub Heading" type="text" ng-trim="true" ng-model="tweetForm.user" />
+                        <input name="subHeading" placeholder="Sub Heading" type="text" ng-trim="true" ng-model="tweet.user" />
                     </div>
 
                     <button class="ui blue button" ng-disabled="tweetForm.$invalid" ng-click="add(tweet)" >Add</button>
