--- a/app/public/modules/twitter/cg.html
+++ b/app/public/modules/twitter/cg.html
@@ -1,7 +1,7 @@
 <div class="twitter bottom" ng-class="side" ng-show="show">
     <div class="gradient-overlay">
-        <h1>{{user}}</h1>
+        <h1>{{tweet}}</h1>
     </div>
 
-    <h2 ng-show="subHeading">{{tweet}}</h2>
+    <h2>{{user}}</h2>
 </div>
