News Crawler Version 1!

--- a/app/public/cg/index.html
+++ b/app/public/cg/index.html
@@ -27,6 +27,8 @@
             <grid animation="bouncy-slide-left"></grid>
         </div>
 
+        <crawler animation="bouncy-slide-up"></crawler>
+
         <!-- 3rd Party Libs -->
         <script src="/js/libs/socket.io.js"></script>
         <script src="/js/libs/moment.js"></script>
@@ -42,5 +44,6 @@
         <script src="/modules/lowerthirds/directive.js"></script>
         <script src="/modules/grid/directive.js"></script>
         <script src="/modules/bug/directive.js"></script>
+        <script src="/modules/crawler/directive.js"></script>
     </body>
 </html>
