--- a/app/public/index.html
+++ b/app/public/index.html
@@ -54,7 +54,7 @@
     <script src="/js/libs/angular/ng-socket-io.js"></script>
     <script src="/js/libs/angular/ng-storage.js"></script>
     <script src="/js/libs/angular/angular-semantic-ui.js"></script>
-    
+
     <!-- App JS Files -->
     <script src="/js/dashboard.js"></script>
 
@@ -62,5 +62,6 @@
     <script src="/modules/lowerthirds/controller.js"></script>
     <script src="/modules/grid/controller.js"></script>
     <script src="/modules/bug/controller.js"></script>
+    <script src="/modules/crawler/controller.js"></script>
   </body>
 </html>
