Tweet functionality added. Jquery marquee library in use. Crawler now broken.

--- a/app/public/cg/index.html
+++ b/app/public/cg/index.html
@@ -15,7 +15,7 @@
         <!-- Set Theme colours -->
         <link rel="stylesheet" href="/css/default.css">
     </head>
-    <body>
+    <body ng-controller="CGCtrl">
 
         <bug animation="fade-toggle"></bug>
 
@@ -30,8 +30,10 @@
         <crawler animation="bouncy-slide-up"></crawler>
 
         <!-- 3rd Party Libs -->
+        <script src="/js/libs/jquery.js"></script>
         <script src="/js/libs/socket.io.js"></script>
         <script src="/js/libs/moment.js"></script>
+        <script type='text/javascript' src='//cdn.jsdelivr.net/jquery.marquee/1.3.1/jquery.marquee.min.js'></script>
 
         <!-- AngularJS Libs -->
         <script src="/js/libs/angular/angular.js"></script>
