--- a/app/public/index.html
+++ b/app/public/index.html
@@ -41,16 +41,17 @@
     <div class="ui vertically padded page grid top-take-50" ng-view>
     </div>
 
-
     <!-- Common JS Libs -->
     <script src="/js/libs/jquery.js"></script>
     <script src="/js/libs/semantic.js"></script>
     <script src="/js/libs/socket.io.js"></script>
+    <script type='text/javascript' src='//cdn.jsdelivr.net/jquery.marquee/1.3.1/jquery.marquee.min.js'></script>
 
     <!-- AngularJS Libs -->
     <script src="/js/libs/angular/angular.js"></script>
     <script src="/js/libs/angular/angular-animate.js"></script>
     <script src="/js/libs/angular/angular-route.js"></script>
+    <script src="/js/libs/angular/angular-resource.js"></script>
     <script src="/js/libs/angular/ng-socket-io.js"></script>
     <script src="/js/libs/angular/ng-storage.js"></script>
     <script src="/js/libs/angular/angular-semantic-ui.js"></script>
