--- a/app/public/modules/crawler/cg.html
+++ b/app/public/modules/crawler/cg.html
@@ -1,5 +1,6 @@
-<div class="crawler rock-bottom" ng-show="show">
+<div class="crawler rock-bottom rock-left" ng-show="show">
     <div class="gradient-overlay">
-        <marquee class="marquee">{{text}}</marquee>
+        <!-- <span class="marquee">{{text}}</span> -->
+        <div class="marquee">{{text}}</div>
     </div>
 </div>
