--- a/app/public/modules/crawler/cg.html
+++ b/app/public/modules/crawler/cg.html
@@ -1,6 +1,10 @@
-<div class="crawler rock-bottom rock-left" ng-show="show">
-    <div class="gradient-overlay">
-        <!-- <span class="marquee">{{text}}</span> -->
-        <div class="marquee">{{text}}</div>
-    </div>
+<div class="scroll-left" ng-show="show">
+  <!-- <div class="rock-bottom rock-left" ng-show="show">
+      <div class="gradient-overlay">
+          <span class="marquee">{{text}}</span>
+          <div class="marquee">{{text}}</div>
+
+      </div>
+  </div> -->
+  <p>{{text}}</p>
 </div>
