--- a/app/public/cg/index.html
+++ b/app/public/cg/index.html
@@ -33,11 +33,12 @@
         <script src="/js/libs/jquery.js"></script>
         <script src="/js/libs/socket.io.js"></script>
         <script src="/js/libs/moment.js"></script>
-        <script type='text/javascript' src='//cdn.jsdelivr.net/jquery.marquee/1.3.1/jquery.marquee.min.js'></script>
+        <!-- <script type='text/javascript' src='//cdn.jsdelivr.net/jquery.marquee/1.3.1/jquery.marquee.min.js'></script> -->
 
         <!-- AngularJS Libs -->
         <script src="/js/libs/angular/angular.js"></script>
         <script src="/js/libs/angular/angular-animate.js"></script>
+        <script src="/js/libs/angular/angular-marquee.js"></script>
         <script src="/js/libs/angular/ng-socket-io.js"></script>
         <script src="/js/libs/angular/angular-momentjs.js"></script>
 
