--- a/app/public/modules/crawler/admin.html
+++ b/app/public/modules/crawler/admin.html
@@ -9,12 +9,15 @@
                 <button class="ui red button" ng-click="hide()" > Hide</button>
             </div>
           </div>
-          <div class="thirteen wide column">
+          <div class="ten wide column">
               {{currentText}}
+          </div>
+          <div class="two wide column">
+            <button class="ui red button" ng-click="hideThird()" > Hide Third</button>
           </div>
         </div>
       </div>
-        <div class="eight wide column">
+        <div class="seven wide column">
             <h1>Add Crawler Item</h1>
             <form name="crawlerItemForm">
                 <div class="ui form">
@@ -57,24 +60,31 @@
                 </div>
             </div>
         </div>
-        <div class="eight wide column">
+        <div class="nine wide column">
             <h1>Current Items</h1>
 
             <h2 ng-if="crawlerItems.length == 0">No Crawler Items added yet.</h2>
 
-            <div class="ui segment slide-top" ng-repeat="item in crawlerItems">
+            <div class="ui grid slide-top" ng-repeat="item in crawlerItems">
                 <div class="ui grid">
-                    <div class="fourteen wide column">
+                    <div class="seven wide column">
                       <p>
                         {{item.text}}
                       </p>
                     </div>
-                    <div class="right aligned two wide column">
+                    <div class="three wide column">
+                      <div class="ui small buttons">
+                          <button class="ui button" ng-class="{green: item.enabled}"ng-click="enabled($index, !item.enabled)" >
+                             <span ng-if="!item.enabled"> Include </span>
+                             <span ng-if="item.enabled"> Exclude </span>
+                           </button>
+                      </div>
+                    </div>
+                    <div class="six wide column">
                         <div class="ui small buttons">
-                            <button class="ui green button" ng-click="enabled($index, !item.enabled)" >
-                               <span ng-if="!item.enabled"> Include </span>
-                               <span ng-if="item.enabled"> Exclude </span>
-                             </button>
+                            <div class="ui positive button" ng-click="showThird('left', item)" >Left</div>
+                            <div class="or"></div>
+                            <div class="ui positive button" ng-click="showThird('right', item)" >Right</div>
                         </div>
                     </div>
                 </div>
