Crawler improvements to animation and colour

--- a/app/public/cg/index.html
+++ b/app/public/cg/index.html
@@ -27,7 +27,7 @@
             <grid animation="bouncy-slide-left"></grid>
         </div>
 
-        <crawler animation="bouncy-slide-up"></crawler>
+        <crawler animation="slide-top"></crawler>
 
         <!-- 3rd Party Libs -->
         <script src="/js/libs/jquery.js"></script>
