--- a/app/public/modules/crawler/cg.html
+++ b/app/public/modules/crawler/cg.html
@@ -1,4 +1,4 @@
-<div class="scroll-left" ng-show="show">
+<div class="scroll-left" ng-show="show" style="width-left: -9px;">
   <!-- <div class="rock-bottom rock-left" ng-show="show">
       <div class="gradient-overlay">
           <span class="marquee">{{text}}</span>
